2017-03-21  David Kilzer  <ddkilzer@apple.com>

        Upgrade to Bugzilla 5.0.3.

2017-02-01  Joseph Pecoraro  <pecoraro@apple.com>

        Patch Details: EWS Bubbles wrap on Patch Details page
        https://bugs.webkit.org/show_bug.cgi?id=167709

        Reviewed by Ryosuke Niwa.

        * template/en/default/attachment/edit.html.tmpl:
        Match the iframe size in list.html.tmpl.

2017-01-28  Joseph Pecoraro  <pecoraro@apple.com>

        Patch Review: EWS Bubbles wrap to multiple lines but can fit on one line
        https://bugs.webkit.org/show_bug.cgi?id=167519

        Reviewed by Ryosuke Niwa.

        While we do post message to determine the size, the fact that we have
        constrained the iframe to a size of 450px meant its body is 450px and
        the div containing the bubbles wraps at 450px. Its full size (~458px)
        is not returned. Although we solve this artifical constraint problem
        inside of the bubble containerMetrics measuring, up this default value
        from 450 to 460 to reduce UI jitter (the current measurement on my
        machine is 458px).

        * PrettyPatch/PrettyPatch.rb:

2017-01-19  Timothy Hatcher  <timothy@hatcher.name>

        Bugzilla email autocomplete does not work on third email field of advanced search page
        https://bugs.webkit.org/show_bug.cgi?id=167204

        Reviewed by Alexey Proskuryakov.

        * committers-autocomplete.js: Added email3 to SINGLE_EMAIL_INPUTS list.

2016-10-09  Simon Fraser  <simon.fraser@apple.com>

        Convert contributors.json to a flat list
        https://bugs.webkit.org/show_bug.cgi?id=163183

        Reviewed by Darin Adler.
        
        Make contributors.json easier to maintain by eliminating the big groupings ("Committers", "Reviewers" etc)
        and moving that data to a "status" property on each contributor.
        
        Fix script that does bugzilla autocomplete.

        * committers-autocomplete.js:
        (statusToType):