@@ -1,104 +1,0 @@
-{
-   "LDAPBaseDN" : "",
-   "LDAPbinddn" : "",
-   "LDAPfilter" : "",
-   "LDAPmailattribute" : "mail",
-   "LDAPserver" : "",
-   "LDAPstarttls" : "0",
-   "LDAPuidattribute" : "uid",
-   "RADIUS_NAS_IP" : "",
-   "RADIUS_email_suffix" : "",
-   "RADIUS_secret" : "",
-   "RADIUS_server" : "",
-   "ajax_user_autocompletion" : "0",
-   "allow_attachment_deletion" : "1",
-   "allow_attachment_display" : "1",
-   "allowbugdeletion" : "1",
-   "allowemailchange" : "1",
-   "allowuserdeletion" : "0",
-   "announcehtml" : "",
-   "attachment_base" : "https://bug-%bugid%-attachments.webkit.org/",
-   "auth_env_email" : "",
-   "auth_env_id" : "",
-   "auth_env_realname" : "",
-   "chartgroup" : "editbugs",
-   "collapsed_comment_tags" : "obsolete, spam",
-   "comment_taggers_group" : "editbugs",
-   "commentonchange_resolution" : "0",
-   "commentonduplicate" : "0",
-   "confirmuniqueusermatch" : "0",
-   "cookiedomain" : "",
-   "cookiepath" : "/",
-   "createemailregexp" : ".*",
-   "debug_group" : "admin",
-   "default_search_limit" : "1000",
-   "defaultopsys" : "Unspecified",
-   "defaultplatform" : "Unspecified",
-   "defaultpriority" : "P2",
-   "defaultquery" : "bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&emailassigned_to1=1&emailassigned_to2=1&emailreporter2=1&emailcc2=1&emailqa_contact2=1&order=Importance&long_desc_type=substring",
-   "defaultseverity" : "Normal",
-   "duplicate_or_move_bug_status" : "RESOLVED",
-   "emailregexp" : "^[\\w\\.\\+\\-=]+@[\\w\\.\\-]+\\.[\\w\\-]+$",
-   "emailregexpdesc" : "A legal address must contain exactly one '@', and at least one '.' after the @.",
-   "emailsuffix" : "",
-   "font_file" : "",
-   "globalwatchers" : "",
-   "inbound_proxies" : "",
-   "insidergroup" : "",
-   "last_visit_keep_days" : "10",
-   "letsubmitterchoosemilestone" : "1",
-   "letsubmitterchoosepriority" : "1",
-   "mail_delivery_method" : "SMTP",
-   "mailfrom" : "bugzilla-daemon@webkit.org",
-   "maintainer" : "admin@webkit.org",
-   "makeproductgroups" : "0",
-   "max_search_results" : "10000",
-   "maxattachmentsize" : "20480",
-   "maxlocalattachment" : "1024",
-   "maxusermatches" : "1000",
-   "memcached_namespace" : "bugzilla:",
-   "memcached_servers" : "",
-   "musthavemilestoneonaccept" : "0",
-   "mybugstemplate" : "buglist.cgi?bug_status=UNCONFIRMED&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;email1=%userid%&amp;emailtype1=exact&amp;emailassigned_to1=1&amp;emailreporter1=1",
-   "noresolveonopenblockers" : "0",
-   "or_groups" : "0",
-   "password_check_on_login" : "1",
-   "password_complexity" : "no_constraints",
-   "proxy_url" : "http://rpms2.macosforge.org:3128/",
-   "querysharegroup" : "editbugs",
-   "quip_list_entry_control" : "moderated",
-   "rememberlogin" : "on",
-   "requirelogin" : "0",
-   "search_allow_no_criteria" : "0",
-   "shadowdb" : "",
-   "shadowdbhost" : "",
-   "shadowdbport" : "3306",
-   "shadowdbsock" : "",
-   "shutdownhtml" : "",
-   "smtp_debug" : "0",
-   "smtp_password" : "",
-   "smtp_ssl" : "0",
-   "smtp_username" : "",
-   "smtpserver" : "bz.apple.com",
-   "ssl_redirect" : "1",
-   "sslbase" : "https://bugs.webkit.org/",
-   "strict_isolation" : "0",
-   "strict_transport_security" : "off",
-   "timetrackinggroup" : "",
-   "upgrade_notification" : "latest_stable_release",
-   "urlbase" : "https://bugs.webkit.org/",
-   "use_mailer_queue" : "1",
-   "use_see_also" : "1",
-   "useclassification" : "0",
-   "usemenuforusers" : "0",
-   "useqacontact" : "0",
-   "user_info_class" : "CGI",
-   "user_verify_class" : "DB",
-   "usestatuswhiteboard" : "0",
-   "usetargetmilestone" : "0",
-   "usevisibilitygroups" : "0",
-   "utf8" : "1",
-   "webdotbase" : "http://www.research.att.com/~north/cgi-bin/webdot.cgi/%urlbase%",
-   "webservice_email_filter" : "0",
-   "whinedays" : "7"
-}
