@@ -1,5 +1,12 @@
 2017-03-21  David Kilzer  <ddkilzer@apple.com>
 
+        Commit local changes for Bugzilla 5.0.3
+
+        * images/favicon.ico: Update favicon from Dec 11, 2015.
+        * data/params.json: Deleted.
+
+2017-03-21  David Kilzer  <ddkilzer@apple.com>
+
         Upgrade to Bugzilla 5.0.3.
 
 2017-02-01  Joseph Pecoraro  <pecoraro@apple.com>
